# orbitals

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
Orbitals/: CMakeLists.txt  classicalorbitalelements.cpp  classicalorbitalelements.h  lambert.cpp  lambert.h  matrix3.h  newtonsmethod.cpp  newtonsmethod.h  orbital.cpp  orbital.h  orbitalsystem.cpp  orbitalsystem.h  pi.h  positionvelocity.h  primarybody.h  trajectorytype.h  vector3.h
Orbitals-Tests/: CMakeLists.txt  main.cpp
OrbitalsDesktop/: CMakeLists.txt  main.cpp  main.qml  orbitalbody.qml  orbitalchangedata.h  orbitalsinterface.cpp  orbitalsinterface.h  qml.qrc  qqmlvector.h
OrbitalsDesktop/CameraControls/: WasdController.qml  WasdOrbitController.qml
OrbitalsDesktop/Components/: OrbitListView.qml  OrbitalBody.qml  OrbitalController.qml  OrbitalEditor.qml  OrbitalEditorDetails.qml  OrbitalElementsView.qml  OrbitalListView.qml  OrbitalSpawner.qml  PrimaryBody.qml  WasdController.qml  qmldir
OrbitalsDesktop/OrbitalControls/: ButtonBackground.qml  DetailLabel.qml  EditButtons.qml  NumberInput.qml  OrbitalEditor.qml  OrbitalEditorDetails.qml  OrbitalElementsView.qml  OrbitalListView.qml  PositionVelocityView.qml  ThemedButton.qml  TimeView.qml  qmldir
OrbitalsDesktop/OrbitalView/: Arrow.qml  OrbitalBody.qml  OrbitalSpawner.qml  PrimaryBody.qml  qmldir
OrbitalsDesktop/theme/: theme.cpp  theme.h
OrbitalsTests/: CMakeLists.txt  main.cpp
